--- a/pages/user/forgot-pwd.htm
+++ b/pages/user/forgot-pwd.htm
@@ -4,7 +4,7 @@
     <title>USG</title>
     <link
       rel="shortcut icon"
-      href="resources/img/icon/web.ico"
+      href="../resources/img/web.ico"
       type="image/x-icon"
     />
 
@@ -20,16 +20,11 @@
     <script src="https://kit.fontawesome.com/8d195968ab.js"></script>
 
     <!-- Style CSS -->
-    <link rel="stylesheet" href="resources/css/styles.css" />
-    <link rel="stylesheet" href="resources/css/index.css" />
+    <link rel="stylesheet" href="../resources/css/styles.css" />
+    <link rel="stylesheet" href="../resources/css/forgot-pwd.css" />
 
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="../resources/vendors/css/bootstrap.min.css" />
   </head>
 
   <body>
@@ -66,9 +61,9 @@
 
       <div class="nav-bar-menu container" id="nav-bar-menu">
         <div class="logo-brand">
-          <a href="index.htm" class="h-100 d-flex align-items-center">
+          <a href="#" class="h-100 d-flex align-items-center">
             <img
-              src="resources/img/logo/fit-logo.png"
+              src="../resources/img/fit-logo.png"
               alt=""
               style="height: 2.5; width: 2.5rem"
             />
@@ -81,10 +76,10 @@
 
           <div class="nav-link-menu">
             <ul>
-              <li class="nav-link" id="sales" style="--i: 0.5s">
+              <li class="nav-link" id="sales" style="--i: 0.6s">
                 <a href="#">SALES</a>
               </li>
-              <li class="nav-link" style="--i: 0.6s">
+              <li class="nav-link" style="--i: 0.85s">
                 <a href="#">
                   ÁO
                   <svg
@@ -119,7 +114,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-link" style="--i: 0.7s">
+              <li class="nav-link" style="--i: 1.1s">
                 <a href="#">
                   QUẦN
                   <svg
@@ -154,7 +149,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-link" style="--i: 0.8s">
+              <li class="nav-link" style="--i: 1.3s">
                 <a href="#">
                   VỚ TẤT
                   <svg
@@ -183,7 +178,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-link" style="--i: 0.9s">
+              <li class="nav-link" style="--i: 1.45s">
                 <a href="#">
                   PHỤ KIỆN
                   <svg
@@ -218,7 +213,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-link" style="--i: 1s">
+              <li class="nav-link" style="--i: 1.45s">
                 <a href="#">THÔNG TIN</a>
               </li>
             </ul>
@@ -254,7 +249,7 @@
               name=""
               id="account-btn"
               class="btn bg-transparent mx-5"
-              href="/login.htm"
+              href="#"
               role="button"
             >
               <!-- <i class="fas fa-user text-dark"></i> -->
@@ -308,333 +303,75 @@
     </div>
 
     <!-- Body -->
-    <a href="#">
-      <img
-        class="img-banner"
-        src="resources/img/banner/bannerBF.jpg"
-        alt="banner"
-      />
-    </a>
-
     <div class="body-content container">
-      <!-- Shortcut Secsion -->
-      <div class="secsion-first--shortcut container">
-        <div class="row">
-          <div class="col-6 col-lg-3 p-0 pr-2">
-            <div class="img-shortcut">
-              <a href="#">
-                <img
-                  class="rounded"
-                  src="resources/img/product/shortcut/best-seller.png"
-                  alt=""
-                  width="100%"
-                />
-                <div class="content-shortcut rounded">
-                  <h1>90%</h1>
-                  <h4>Khách hàng tin dùng</h4>
-                </div>
-              </a>
-            </div>
-            <p class="des-shortcut">Thịnh Hành</p>
-          </div>
-
-          <div class="col-6 col-lg-3 p-0 pl-2 px-lg-1">
-            <div class="img-shortcut">
-              <a href="#">
-                <img
-                  class="rounded"
-                  src="resources/img/product/shortcut/new-brand.png"
-                  alt=""
-                  width="100%"
-                />
-                <div class="content-shortcut rounded">
-                  <h4>New Arrival</h4>
-                  <h2>BST Giáng Sinh</h2>
-                </div>
-              </a>
-            </div>
-            <p class="des-shortcut">Hàng Mới Về</p>
-          </div>
-
-          <div class="col-6 col-lg-3 p-0 pr-2 px-lg-1">
-            <div class="img-shortcut">
-              <a href="#">
-                <img
-                  class="rounded"
-                  src="resources/img/product/shortcut/sale.png"
-                  alt=""
-                  width="100%"
-                />
-                <div class="content-shortcut rounded">
-                  <h4>Ưu đãi lên đến</h4>
-                  <h1>50%</h1>
-                </div>
-              </a>
-            </div>
-            <p class="des-shortcut">Giảm Giá Sốc</p>
-          </div>
-
-          <div class="col-6 col-lg-3 p-0 pl-2">
-            <div class="img-shortcut">
-              <a href="#">
-                <img
-                  class="rounded"
-                  src="resources/img/product/shortcut/box.png"
-                  alt=""
-                  width="100%"
-                />
-                <div class="content-shortcut rounded">
-                  <h4>Combo được</h4>
-                  <h1>60%</h1>
-                  <h5>Khách hàng tin dùng</h5>
-                </div>
-              </a>
-            </div>
-            <p class="des-shortcut">Combo Ưu Đãi</p>
+      <!-- Header Body -->
+      <div class="page-header mx-auto">
+        <div class="container">
+          <div class="page-header__content text-center">
+            <h1
+              class="page-header__title forgot-title text-center"
+              style="color: #283657"
+            >
+              CẤP LẠI MẬT KHẨU
+            </h1>
           </div>
         </div>
       </div>
-      <hr />
 
-      <div class="secsion-top-product">
-        <h3 class="text-center py-4" style="color: #283657; font-weight: bold">
-          SẢN PHẨM NỔI BẬT
-        </h3>
+      <!-- Login Form -->
+      <div class="form-forgot container px-0">
+        <div class="container px-0">
+          <form class="needs-validation" novalidate method="POST" action=" ">
+            <div class="form-group">
+              <label for="uname">TÊN ĐĂNG NHẬP:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="uname"
+                placeholder="TÊN ĐĂNG NHẬP"
+                name="uname"
+                required
+              />
+              <div class="valid-feedback"></div>
+              <div class="invalid-feedback">Vui lòng điền Tên đăng nhập</div>
+            </div>
 
-        <div id="carouselId" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\2L6A5871_375x425.jpg"
-                      alt="1"
-                      width="100%;"
-                    />
-                  </a>
+            <div class="form-group">
+              <label for="email">EMAIL:</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="EMAIL"
+                name="email"
+                required
+              />
+              <div class="valid-feedback"></div>
+              <div class="invalid-feedback">Vui lòng điền Email</div>
+            </div>
 
-                  <a href="#" class="name">
-                    Quần Short Kaki nam Vintage màu xám be
-                  </a>
-                  <p class="price">249.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\careshare_ao_polo_375x425.jpg"
-                      alt="2"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Áo Polo Coolmate thêu Care&Share màu đen
-                  </a>
-                  <p class="price">299.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\careshare_trang_2_375x425.jpg"
-                      alt="3"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Áo thun nam Cotton Compact phiên bản Premium in Care&Share
-                    giữa áo màu trắng
-                  </a>
-                  <p class="price">259.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\careshare_ao_trang_1_10_375x425.jpg"
-                      alt="4"
-                      width="100%;"
-                    />
-                  </a>
-                  <a href="#" class="name">
-                    Áo thun nam Cotton Compact phiên bản Premium in Care&Share
-                    màu trắng
-                  </a>
-                  <p class="price">259.000đ</p>
-                </div>
+            <div class="row w-100 align-items-center mx-0">
+              <div class="col-12">
+                <p class="text-center">
+                  Mật khẩu mới sẽ được gửi qua Email của bạn
+                </p>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\IMG_3178_375x425.jpg"
-                      alt="5"
-                      width="100%;"
-                    />
-                  </a>
 
-                  <a href="#" class="name">
-                    Áo thun nam Cotton Compact phiên bản Premium in Care&Share
-                    giữa áo màu đen
-                  </a>
-                  <p class="price">259.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\careshare_ao_xanh_lam_375x425.jpg"
-                      alt="6"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Áo thun nam Cotton Compact phiên bản Premium in Care&Share
-                    màu xanh lam
-                  </a>
-                  <p class="price">259.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\careshare_ao_1_375x425.jpg"
-                      alt="7"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Áo thun nam Cotton Compact phiên bản Premium in Care&Share
-                    màu đen
-                  </a>
-                  <p class="price">259.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\combo_375x425.jpg"
-                      alt="8"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Combo 2 quần lót nam Trunk kẻ Bluemoon Stripe Xám - Xanh
-                  </a>
-                  <p class="price">258.000đ</p>
-                </div>
-              </div>
+            <div
+              class="container d-flex flex-column justify-content-center align-items-center"
+            >
+              <button type="submit" class="btn send-pwd rounded-0">
+                GỬI LẠI MẬT KHẨU
+              </button>
             </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\max_ultra_aqua_375x425.jpg"
-                      alt="9"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Quần thể thao nam Max Ultra Short màu xanh Aqua (có thêm túi
-                    khoá sau)
-                  </a>
-                  <p class="price">239.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\maxcool_den__375x425.jpg"
-                      alt="10"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name"> Áo thể thao nam MaxCool màu đen </a>
-                  <p class="price">219.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\2L6A9776_copy_375x425.jpg"
-                      alt="11"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Quần thể thao nam Max Ultra Short màu xanh tím than (có thêm
-                    túi khoá sau)
-                  </a>
-                  <p class="price">239.000đ</p>
-                </div>
-
-                <div class="col-6 col-lg-3 item-product">
-                  <a href="#">
-                    <img
-                      class="mb-2"
-                      src="resources\img\product\templateImg\2L6A9750_copy_375x425.jpg"
-                      alt="4"
-                      width="100%;"
-                    />
-                  </a>
-
-                  <a href="#" class="name">
-                    Quần thể thao nam Max Ultra Short màu đen (có thêm túi khoá
-                    sau)
-                  </a>
-                  <p class="price">239.000đ</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselId"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselId"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+          </form>
         </div>
       </div>
     </div>
 
     <!-- Secsion Footer -->
     <div class="footer" style="overflow-x: hidden">
-      <hr class="separate-infor--small-screen" />
       <div class="container-fuild">
         <div class="footer-contact container">
           <div
@@ -652,7 +389,7 @@
               <p>LIKE USG VÀ NHẬN KHUYẾN MÃI HẤP DẪN MỖI NGÀY</p>
               <div class="icon--contact">
                 <a href="https://www.facebook.com/"
-                  ><i class="fab fa-facebook-square"></i
+                  ><i class="fab fa-facebook-square" style="color: 0776e8"></i
                 ></a>
                 <a href="https://www.youtube.com/"
                   ><i class="fab fa-youtube"></i
@@ -694,7 +431,7 @@
 
             <div class="d-none d-sm-none d-lg-block col-lg-2 footer--certi--lg">
               <img
-                src="resources/img/certificate/certificate.png"
+                src="../resources/img/certificate.png"
                 alt=""
                 width="100%"
                 height="auto"
@@ -718,7 +455,7 @@
               class="d-sm-flex col-sm-3 d-lg-none footer--certi--sm justify-content-center"
             >
               <img
-                src="resources/img/certificate/certificate.png"
+                src="../resources/img/certificate.png"
                 alt=""
                 width="40%"
                 height="auto"
@@ -731,24 +468,11 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
+    <script src="../resources/vendors/js/jquery-3.3.1.min.js"></script>
+    <script src="../resources/vendors/js/popper.min.js"></script>
+    <script src="../resources/vendors/js/bootstrap.min.js"></script>
 
-    <!-- Script For Every Thing -->
-    <script src="/resources/js/script_ulti.js"></script>
-    <script src="/resources/js/Navigator.js"></script>
+    <!-- Script for Page -->
+    <script src="../resources/js/script_util.js"></script>
   </body>
 </html>
